logs/qiime-tools.log
Listing '.'...
Listing './bin'...
Compiling './bin/PCoA_bubble.py'...
***   File "./bin/PCoA_bubble.py", line 144
    if ax.legend_ <> None:
                   ^
SyntaxError: invalid syntax

Compiling './bin/assign_taxonomy_by_blast_result.py'...
***   File "./bin/assign_taxonomy_by_blast_result.py", line 53
    print 'Taxonomy written to: {}'.format(args.assigned_taxonomy_fp)
                                  ^
SyntaxError: invalid syntax

Compiling './bin/barcode_filter.py'...
***   File "./bin/barcode_filter.py", line 38
    print count
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/biom_phyla_summary.py'...
***   File "./bin/biom_phyla_summary.py", line 49
    print 'Total sequence count: %i\n' % tot_seqs
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/condense_workflow.py'...
***   File "./bin/condense_workflow.py", line 42
    print "Condensing OTUs:\n"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/filter_keep_otus_by_sample.py'...
***   File "./bin/filter_keep_otus_by_sample.py", line 45
    if args.verbose: print otu, 'removed'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/filter_rep_set.py'...
***   File "./bin/filter_rep_set.py", line 77
    print '%i sequences associated with unique OTUs' % len(records)
                                                   ^
SyntaxError: invalid syntax

Compiling './bin/iTol.py'...
***   File "./bin/iTol.py", line 56
    print 'ID not found:', row['id']
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/merge_otu_results.py'...
***   File "./bin/merge_otu_results.py", line 53
    print '{} files merged'.format(len(args.pick_otus_results))
                          ^
SyntaxError: invalid syntax

Compiling './bin/multi_parallel_pick_otus.py'...
***   File "./bin/multi_parallel_pick_otus.py", line 82
    print outFN
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/multi_qsub.py'...
***   File "./bin/multi_qsub.py", line 33
    print 'qsub {}'.format(script)
                  ^
SyntaxError: invalid syntax

Compiling './bin/otu_condense.py'...
***   File "./bin/otu_condense.py", line 95
    print '%i total original OTUs' % (len(uniqueTaxonomies) + nuID_count)
                                 ^
SyntaxError: invalid syntax

Compiling './bin/otu_to_tax_name.py'...
***   File "./bin/otu_to_tax_name.py", line 51
    print 'Error: OTU ID {} not found in supplied taxonomy file; stopping...'.format(ID)
                                                                            ^
SyntaxError: invalid syntax

Compiling './bin/pick_otus_condense.py'...
***   File "./bin/pick_otus_condense.py", line 89
    print 'Output written to {}'.format(args.condensed_seqs_otus_file)
                               ^
SyntaxError: invalid syntax

Compiling './bin/primer_average.py'...
***   File "./bin/primer_average.py", line 82
    print 'Shared OTU:', otuid
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/prune_otus.py'...
***   File "./bin/prune_otus.py", line 216
    print 'Input: \t{} total samples'.format(nsamples)
                                    ^
SyntaxError: invalid syntax

Compiling './bin/sanger_qiimify.py'...
***   File "./bin/sanger_qiimify.py", line 41
    print parser.format_usage().strip()
               ^
SyntaxError: invalid syntax

Compiling './bin/split_sequence_data.py'...
***   File "./bin/split_sequence_data.py", line 61
    print msg.format(len(buckets), len(buckets[0]))
            ^
SyntaxError: invalid syntax

Listing './data'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qiime_tools'...
Compiling './lib/python3.5/site-packages/qiime_tools/otu_calc.py'...
***   File "./lib/python3.5/site-packages/qiime_tools/otu_calc.py", line 107
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/qiime_tools/test'...
Listing './lib/python3.5/site-packages/qiime_tools-1.1.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
